; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_start.c_action_start_performance_counters_core.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_start.c_action_start_performance_counters_core.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.retro_perf_counter = type { i32 }

@MENU_SETTINGS_LIBRETRO_PERF_COUNTERS_BEGIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @action_start_performance_counters_core to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_start_performance_counters_core(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.retro_perf_counter**, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = call %struct.retro_perf_counter** (...) @retro_get_perf_counter_libretro()
  store %struct.retro_perf_counter** %7, %struct.retro_perf_counter*** %5, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @MENU_SETTINGS_LIBRETRO_PERF_COUNTERS_BEGIN, align 4
  %10 = sub i32 %8, %9
  store i32 %10, i32* %6, align 4
  %11 = load %struct.retro_perf_counter**, %struct.retro_perf_counter*** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @generic_action_start_performance_counters(%struct.retro_perf_counter** %11, i32 %12, i32 %13, i8* %14)
  ret i32 %15
}

declare dso_local %struct.retro_perf_counter** @retro_get_perf_counter_libretro(...) #1

declare dso_local i32 @generic_action_start_performance_counters(%struct.retro_perf_counter**, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
